--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,10 +19,18 @@
 	}
 }
 
+html,
+body {
+	height: 100%;
+}
+
 body {
 	background: var(--background);
 	color: var(--foreground);
 	font-family: Arial, Helvetica, sans-serif;
+	display: flex;
+	flex-direction: column;
+	min-height: 100%;
 }
 
 button {
